# WCTimpl

./: .clang_complete  .gitignore  CMakeLists.txt  WCT.sublime-project  test  test.c  testhash.c  testtime.c
Cmake/: FindGurobi.cmake
FindFiles/: FindGurobi.cmake
cmake/: FindGurobi.cmake
help/: generate.py  test1.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt
scripts/: cc_args.py  compileflags.py  compute_size_zdd.py  compute_stab.py  compute_summary.py  exedir.py  generate.py  script.sh  sedscript.sh
src/: PricerConstruct.hpp  PricerEvaluate.hpp  PricerSolver.hpp  alloc.c  alloc.h  binomial-heap.c  branch_coloring.h  branch_strongcoloring.h  coloringplugins.c  coloringplugins.h  config.h  cons_storeGraph.c  copy.c  datastructsol.h  defs.h  graph.c  greedy.c  heap.c  heap.h  heur_init.c  heur_init.h  heurdiving.c  heurdiving.h  ksubset.c  ksubset.h  localsearch.c  lowerbound.c  lp.c  lp.h  main.c  mainwct.c  new_heurdiving.c  new_heurdiving.h  partlist.c  pricer_wct.c  pricer_wct.h  probdata_wct.c  probdata_wct.h  reader_wct.c  reader_wct.h  (+17 more)
src/tdzdd/: DdEval.hpp  DdSpec.hpp  DdSpecOp.hpp  DdStructure.hpp
src/tdzdd/dd/: DataTable.hpp  DdBuilder.hpp  DdReducer.hpp  DdSweeper.hpp  Node.hpp  NodeTable.hpp  PathCounter.hpp  UniqueTable.hpp
src/tdzdd/eval/: Cardinality.hpp  ToZBDD.h
src/tdzdd/op/: BinaryOperation.hpp  DdBuilderDF.hpp  Lookahead.hpp  Unreduction.hpp
src/tdzdd/util/: MyVector.hpp
src/testmem.dSYM/Contents/: Info.plist
src/testmem.dSYM/Contents/Resources/DWARF/: testmem
